# PBL4_gaze-wheelchair

src/jetson/: deploy.prototxt  gaze_execute.py
src/jetson/weights/: gaze_onnx_finetune.ipynb
src/mcu/: CMakeLists.txt  hall_rpm.c  hall_rpm.h  joystick_motor.c  joystick_motor.h  main.c  mode_manager.c  mode_manager.h  rpm_pid.c  rpm_pid.h  uart_control.c  uart_control.h
